[tool.poetry]
name = "dotslashCosmic/dotslashcode"
version = "2"
description = "Bing-Chat-API"
authors = ["dotslashCosmic <dotslashcosmic@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "*"
BingImageCreator = "*"
certifi = "*"
httpx = "*"
prompt_toolkit = "*"
requests = "*"
rich = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bing-chat = "main:main"

[tool.poetry.urls]
"Bug Report" = "https://github.com/dotslashCosmic/dotslashcode/issues/new"
